add: GetBookingsToday
